Move resources folder and refactored tests